git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@27 1c266114-290a-0410-b1ce-a63319e86887

--- a/sample/s2buri-orderSample/order/orderCustomerSelect.html
+++ b/sample/s2buri-orderSample/order/orderCustomerSelect.html
@@ -15,10 +15,10 @@
 		<tr>
 			<td>
 				<select
-					m:value="#{customerListDto.customerList}"
+					m:items="#{customerList}"
 					m:label="顧客名"
-					m:itemValue="customerName"
-					m:itemLabel="customerId"
+					m:itemValue="customerId"
+					m:itemLabel="customerName"
 					m:nullLabel="選択して下さい。">
 					<option value="1">選択して下さい。</option>
 				</select>
