ant:prepare-env target for automation
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@50 1c266114-290a-0410-b1ce-a63319e86887

--- a/sample/s2buri-example/gas/meterCheck.html
+++ b/sample/s2buri-example/gas/meterCheck.html
@@ -25,6 +25,10 @@
 </table>
 <input type="submit" value="“o˜^" m:action="#{meterCheckInputAction.entry}"/>
 </form>
+<p>
+DB‚ÉŠù‚É“o˜^‚³‚ê‚Ä‚¢‚éŒÚ‹q”Ô†‚Í('TEST001','TEST002','TEST003')‚Å‚·B
+‚±‚ê‚ç‚ÌŒÚ‹q”Ô†‚ðŽg—p‚µ‚ÄŒŸjŒ‹‰Ê‚Ì“o˜^‚ðs‚Á‚Ä‚Ý‚Ä‚­‚¾‚³‚¢B
+</p>
 </span>
 </body>
 </html>
